--- a/src/views/en/index.ejs
+++ b/src/views/en/index.ejs
@@ -1,7 +1,7 @@
 <% let meta={ title: "indexTitleテスト" , description: "トップページの説明" , keywords: "test, bridge" , ogTitle: "ページタイトル" ,
     ogDescription: "ページ説明文" , ogtype: "" , ogUrl: "" , ogImage: "" , ogsiteName: "" , ogLocate: "" , basePath: "../../"
     , selected: "selected" , optionJp: "Japanese" , optionEn: "English" , terms: "terms of service" ,
-    privacy: "privacy policy" }; %>
+    privacy: "privacy policy" , lang: "en/"}; %>
     <%- include('/common/_metaCreate', { meta }) %>
         <!DOCTYPE html>
         <html lang="ja">
