--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @use 'common.vars';
+@use 'mixins';
 
 /*! =====================
     footer_section
@@ -9,8 +10,9 @@
     padding-top: 48px;
     padding-bottom: 97px;
     padding-inline: min(calc((88 / 1600) * 100vw), 88px);
-    max-width: 1424px;
+    max-width: 1600px;
     margin: 0 auto;
+
     .footer-logo {
         width: fit-content;
         transition: opacity 0.3s;
@@ -19,6 +21,11 @@
             width: 168px;
             height: auto;
             margin-bottom: 34.5px;
+
+            @include mixins.mediaquery-md {
+                margin-bottom: 48px;
+            }
+
             display: block;
         }
 
@@ -33,10 +40,16 @@
 
         ul {
             display: flex;
-            gap: calc((32 / 1600) * 100vw);
+            column-gap: calc((32 / 1600) * 100vw);
             align-items: center;
             font-size: 16px;
             font-weight: 400;
+
+            @include mixins.mediaquery-md {
+                flex-direction: column;
+                align-items: start;
+                row-gap: 32px;
+            }
 
             li:nth-of-type(6) {
                 color: map.get(common.$colors, black400);
@@ -57,6 +70,10 @@
             height: auto;
             transition: opacity 0.3s ease;
 
+            @include mixins.mediaquery-md {
+                width: 32px;
+            }
+
             &:hover {
                 opacity: 0.5;
             }
@@ -68,15 +85,46 @@
             max-width: 24px;
             transition: opacity 0.3s ease;
 
+            @include mixins.mediaquery-md {
+                width: 32px;
+            }
+
             &:hover {
                 opacity: 0.5;
             }
         }
     }
 
+    @include mixins.mediaquery-md {
+        .footer-sns {
+            display: flex !important;
+            column-gap: 24px;
+            justify-content: center;
+            position: relative;
+            margin-block: 49px;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: -17px;
+                width: 100%;
+                height: 1px;
+                border: solid 1px map.get(common.$colors, black100);
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: -17px;
+                width: 100%;
+                height: 1px;
+                border: solid 1px map.get(common.$colors, black100);
+            }
+        }
+    }
+
     .footer-Terms {
-        display: flex;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 500;
         position: relative;
 
@@ -85,8 +133,14 @@
         }
 
         p {
+            font-size: 14px;
             position: absolute;
             right: 0;
+
+            @include mixins.mediaquery-md {
+                position: relative;
+                margin-top: 40px;
+            }
         }
 
         a {
