--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,7 +1,7 @@
-$screen-md: 768px;
+$screen-md: 961px;
 $screen-sm: 400px;
 
-@mixin mediaquery-m() {
+@mixin mediaquery-md() {
   @media screen and (max-width: #{ $screen-md - 1px }) {
     @content;
   }
