--- a/src/views/en/about.ejs
+++ b/src/views/en/about.ejs
@@ -1,7 +1,7 @@
 <% let meta={ title: "indexTitleテスト" , description: "トップページの説明" , keywords: "test, bridge" , ogTitle: "ページタイトル" ,
     ogDescription: "ページ説明文" , ogtype: "" , ogUrl: "" , ogImage: "" , ogsiteName: "" , ogLocate: "" , basePath: "../../"
     , selected: "" , optionJp: "日本語" , optionEn: "英語" , terms: "terms of service" ,
-    privacy: "privacy policy" }; %>
+    privacy: "privacy policy",lang: "en/" }; %>
     <%- include('/common/_metaCreate', { meta }) %>
         <!DOCTYPE html>
         <html lang="ja">
