--- a/src/views/jp/services/event.ejs
+++ b/src/views/jp/services/event.ejs
@@ -1,20 +1,18 @@
 <% let meta={ title: "indexTitleテスト" , description: "トップページの説明" , keywords: "test, bridge" , ogTitle: "ページタイトル" ,
     ogDescription: "ページ説明文" , ogtype: "" , ogUrl: "" , ogImage: "" , ogsiteName: "" , ogLocate: "" ,
-    basePath: "../../../" , selected: "" , optionJp: "日本語" , optionEn: "英語" , terms: "利用規約" , privacy: "個人情報保護方針" }; %>
+    basePath: "../../../" , selected: "" , optionJp: "日本語" , optionEn: "英語" , terms: "利用規約" , privacy: "個人情報保護方針" , lang: "jp/"}; %>
     <%- include('/common/_metaCreate', { meta }) %>
         <!DOCTYPE html>
         <html lang="ja">
         <%- include('/common/_headContent', { meta }) %>
 
-            <body data-page="../../en/services">
+            <body data-page="../../en/services" class="page-event">
                 <%- include('/common/_header', {meta}) %>
 
                     <ul class="c-breadcrumbs c-wrapper">
-                        <li><a href="/">トップ</a></li>
+                        <li><a href="/">Top</a></li>
                         <li>＞</li>
-                        <li><a href="../">事業紹介</a></li>
-                        <li>＞</li>
-                        <li class="_active">イベントコーディネート事業</li>
+                        <li><a href="../">イベントコーディネート事業</a></li>
                     </ul>
 
                     <div class="c-modal">
@@ -33,9 +31,10 @@
                         </div>
                     </div>
 
-                    <section class="event-hero c-wrapper">
+                    <section class="c-hero c-wrapper">
+                        <p>Event Cordinate</p>
                         <h2>イベントコーディネート事業</h2>
-                        <div class="event-hero-content">
+                        <div class="c-hero-content">
                             <div>
                                 <h3 class="c-headline">医療の知を結び、<br />ユーザーの「見たい」を<br />カタチに。</h3>
                                 <p>循環器領域に精通した私たちは、医療従事者・企業・参加者をつなぎ、
@@ -43,38 +42,43 @@
                                 </p>
                             </div>
                             <div class="js-scale">
-                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <img src="../../../<%= ASSET_PATH %>asset/img/services/event-mv.jpg" alt="医療の知を結び、ユーザーの「見たい」をカタチに。">
                             </div>
                         </div>
                     </section>
 
-                    <section class="c-explanation c-wrapper">
-                        <h3 class="c-headline">依頼に応えるだけでなく、医療の現場と市場の変化を捉え、<br />新しい企画を自ら生み出すイベントプロデュースチーム</h3>
-                        <div class="c-explanation-content">
+                    <section class="c-explanation">
+                        <div class="c-explanation-bg">
+                            <img src="../../../<%= ASSET_PATH %>asset/img/services/explanation.jpg" alt="高度な専門人材">
+                            <div class="c-explanation-bg-overlay"></div>
+                        </div>
+                        <div class="c-explanation-content c-wrapper">
+                            <h3>依頼に応えるだけでなく、<br />医療の現場と市場の変化を捉え、<br />新しい企画を自ら生み出す<br />イベントプロデュースチーム</h3>
                             <div>
-                                <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
+                                <ul>
+                                    <li>
+                                        <h4>専門領域への<br />深い理解</h4>
+                                        <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <h4>信頼関係に<br />基づく共創体制</h4>
+                                        <p>医療従事者・企業・関係団体との長年の信頼関係を基盤に、
+                                            目的や立場を問わず「共に創る」体制を確立。依頼内容に応えるだけでなく、より効果的な構成・運営を提案し、
+                                            プロジェクト全体を統合的にディレクションします。</p>
+                                    </li>
+                                    <li>
+                                        <h4>トレンドを<br />捉える企画力</h4>
+                                        <p>自社メディアでの情報発信や取材活動、学会参加を通じて現場や企業のリアルな情報を収集。業界の変化や次の潮流を先読みし、参加者が「今、知りたい」と思うテーマをいち早く企画に落とし込みます。
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <h4>データと<br />経験を融合した<br />改善サイクル</h4>
+                                        <p>イベント後のアンケートや視聴データを分析し、 参加者の反応・満足度・再参加傾向を可視化。数値的な裏付けと経験知を組み合わせ、次の企画へ確実に反映します。
+                                        </p>
+                                    </li>
+                                </ul>
                             </div>
-                            <ul>
-                                <li>
-                                    <h4>専門領域への深い理解</h4>
-                                    <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
-                                    </p>
-                                </li>
-                                <li>
-                                    <h4>信頼関係に基づく共創体制</h4>
-                                    <p>医療従事者・企業・関係団体との長年の信頼関係を基盤に、 目的や立場を問わず「共に創る」体制を確立。依頼内容に応えるだけでなく、より効果的な構成・運営を提案し、
-                                        プロジェクト全体を統合的にディレクションします。</p>
-                                </li>
-                                <li>
-                                    <h4>トレンドを捉える企画力</h4>
-                                    <p>自社メディアでの情報発信や取材活動、学会参加を通じて現場や企業のリアルな情報を収集。業界の変化や次の潮流を先読みし、参加者が「今、知りたい」と思うテーマをいち早く企画に落とし込みます。
-                                    </p>
-                                </li>
-                                <li>
-                                    <h4>データと経験を融合した改善サイクル</h4>
-                                    <p>イベント後のアンケートや視聴データを分析し、 参加者の反応・満足度・再参加傾向を可視化。数値的な裏付けと経験知を組み合わせ、次の企画へ確実に反映します。</p>
-                                </li>
-                            </ul>
                         </div>
                     </section>
 
@@ -82,32 +86,56 @@
                         <h3 class="c-headline">こんなお悩みありませんか？</h3>
                         <ul class="c-task-list">
                             <li>
-                                <p>課題01：見出しテキスト見出しテキスト見出しテキスト</p>
+                                <div>
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue1.png" alt="高度な専門人材">
+                                </div>
+                                <h4>集客・参加率</h4>
+                                <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
+                                </p>
                             </li>
                             <li>
-                                <p>課題02：見出しテキスト見出しテキスト見出しテキスト</p>
+                                <div>
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue2.png" alt="高度な専門人材">
+                                </div>
+                                <h4>企画・コンテンツ</h4>
+                                <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
+                                </p>
                             </li>
                             <li>
-                                <p>課題03：見出しテキスト見出しテキスト見出しテキスト</p>
+                                <div>
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue3.png" alt="高度な専門人材">
+                                </div>
+                                <h4>集客・参加率</h4>
+                                <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
+                                </p>
                             </li>
                             <li>
-                                <p>課題04：見出しテキスト見出しテキスト見出しテキスト</p>
+                                <div>
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/issue4.png" alt="高度な専門人材">
+                                </div>
+                                <h4>集客・参加率</h4>
+                                <p>循環器領域に特化した知見と経験をもとに、医療現場の課題や最新動向を的確に捉えた企画を設計します。臨床と産業の双方に寄り添い、医療従事者・企業の双方に価値を届けます。
+                                </p>
                             </li>
                         </ul>
+                    </section>
 
-                        <h4>企画から運営・分析まで、一貫したプロセスで支援します</h4>
-                        <ul class="c-task-support">
+                    <section class="c-support c-wrapper">
+                        <h3 class="c-headline">企画から運営・分析まで、 <br />必要なフェーズを柔軟にサポート</h3>
+                        <ul class="c-support-list">
                             <li>
-                                <h5>ビジョン設計</h5>
+                                <h5>Phase 01</h5>
+                                <h4>ビジョン設計</h4>
                                 <div>
                                     <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
                                 <p>
-                                    医療の意義から逆算する企画<br />社会的意義と将来像を明確化
+                                    医療の意義から逆算する企画社会的意義と将来像を明確化
                                 </p>
                             </li>
                             <li>
-                                <h5>データ分析・戦略立案</h5>
+                                <h5>Phase 02</h5>
+                                <h4>データ分析・戦略立案</h4>
                                 <div>
                                     <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
@@ -116,7 +144,8 @@
                                 </p>
                             </li>
                             <li>
-                                <h5>広報・コンテンツ設計</h5>
+                                <h5>Phase 03</h5>
+                                <h4>広報・コンテンツ設計</h4>
                                 <div>
                                     <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
@@ -125,7 +154,8 @@
                                 </p>
                             </li>
                             <li>
-                                <h5>運営・進行管理</h5>
+                                <h5>Phase 04</h5>
+                                <h4>運営・進行管理</h4>
                                 <div>
                                     <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
@@ -134,7 +164,8 @@
                                 </p>
                             </li>
                             <li>
-                                <h5>効果分析と改善提案</h5>
+                                <h5>Phase 05</h5>
+                                <h4>効果分析と改善提案</h4>
                                 <div>
                                     <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
                                 </div>
@@ -145,31 +176,33 @@
                         </ul>
                     </section>
 
-                    <section class="c-example c-wrapper">
-                        <h3 class="c-headline">ケーススタディ</h3>
-                        <ul class="c-example-list">
+                    <section class="c-case c-wrapper">
+                        <h3 class="c-title"><span>Case</span> Study</h3>
+                        <ul class="c-case-list">
                             <li>
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
-                                </div>
-                                <div>
+                                    <h5>Case <span>01</span></h5>
                                     <h4>循環器治療の主要領域を網羅した、包括的ライブイベントの実現</h4>
-                                    <h5>Japanese Bifurcation Club（JBC）</h5>
+                                    <p>豊橋ライブデモンストレーションコース</p>
                                     <p>・EBC／KBC／ABCなど世界主要学会との連携による国際展開<br />・分岐部治療に特化した継続的学術コミュニティの構築<br />・症例を通じた臨床知の共有・議論の促進<br />・日本の知見を世界へ届けるライブプラットフォームの確立
                                     </p>
-                                    <p class="c-example-list-more js-modal" data-modal="1">もっと詳しく</p>
+                                    <p class="c-case-list-more js-modal" data-modal="1">more</p>
+                                </div>
+                                <div>
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/case1.jpg" alt="高度な専門人材">
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/about/strengths1.png" alt="高度な専門人材">
-                                </div>
-                                <div>
+                                    <h5>Case <span>02</span></h5>
                                     <h4>日本発の分岐部治療研究会として、世界の潮流と歩む</h4>
-                                    <h5>豊橋ライブデモンストレーションコース</h5>
+                                    <p>Japanese Bifurcation Club（JBC）</p>
                                     <p>・2025年の開催では、5日間・6配信ルーム・100を超えるプログラムを実施<br />・参加者数2,447名（前年比＋399名）／有料参加者前年比150％増<br />・学術イベントの持続的成長モデルとして定着<br />・多様なステークホルダーが共に価値を創出するイベントの新たな形を提示
                                     </p>
-                                    <p class="c-example-list-more js-modal" data-modal="2">もっと詳しく</p>
+                                    <p class="c-case-list-more js-modal" data-modal="2">more</p>
+                                </div>
+                                <div>
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/case2.jpg" alt="高度な専門人材">
                                 </div>
                             </li>
                         </ul>
@@ -180,31 +213,47 @@
                         <p>私たちは、医療イベントを単なる開催ではなく、「価値を生み、次につながる場」として設計することを大切にしています。その実現には、以下の5つの要素が欠かせないと考えています。</p>
                         <ul class="event-clause-list">
                             <li>
-                                <h4>明確で持続的なビジョン</h4>
+                                <div>
+                                    <h4>01</h4>
+                                    <h5>明確で持続的な<br />ビジョン</h5>
+                                </div>
                                 <p>
                                     開催するイベントに、社会的意義や将来像を明確に描いたビジョンが存在し、その実現に向けた一貫した方針をお持ちであること。
                                 </p>
                             </li>
                             <li>
-                                <h4>一定の開催実績と体制</h4>
+                                <div>
+                                    <h4>02</h4>
+                                    <h5>一定の開催実績と体制</h5>
+                                </div>
                                 <p>
                                     同種または関連テーマのイベントを継続的に実施されており、安定した運営・企画体制を確立されていること。
                                 </p>
                             </li>
                             <li>
-                                <h4>関係者間で共有・浸透したビジョン</h4>
+                                <div>
+                                    <h4>03</h4>
+                                    <h5>関係者間で<br />共有・浸透したビジョン</h5>
+                                </div>
                                 <p>
                                     主催者だけでなく、院内外の協力者・賛同者との間で理念や目的を共有し、共通の価値観のもとで推進されていること。
                                 </p>
                             </li>
                             <li>
-                                <h4>外部ステークホルダーとの連携・支援体制</h4>
+                                <div>
+                                    <h4>04</h4>
+                                    <h5>外部ステークホルダーとの連携・支援体制</h5>
+
+                                </div>
                                 <p>
                                     関連企業、学会、自治体などとの協力関係を構築し、イベントの持続可能性と社会的信頼性を担保されていること。
                                 </p>
                             </li>
                             <li>
-                                <h4>提供価値に応じた公正な対価設計</h4>
+                                <div>
+                                    <h4>05</h4>
+                                    <h5>提供価値に応じた<br />公正な対価設計</h5>
+                                </div>
                                 <p>
                                     企画・運営・参加に関わるリソースや専門性に見合った適正な対価を設定し、関係者すべてに公平な価値還元を行われていること。
                                 </p>
@@ -213,11 +262,11 @@
                     </section>
 
                     <section class="c-member c-wrapper">
-                        <h3 class="c-headline">チームメンバー</h3>
+                        <h3 class="c-title"><span>Our</span> Team</h3>
                         <ul class="c-member-list">
                             <li>
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/ourTeam1.jpg" alt="橋本 悟">
                                 </div>
                                 <div>
                                     <h4>橋本 悟</h4>
@@ -232,29 +281,13 @@
                             </li>
                             <li>
                                 <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
+                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/ourTeam2.jpg" alt="許沢 佳弘">
                                 </div>
                                 <div>
                                     <h4>許沢 佳弘</h4>
                                     <p>
                                         日本赤十字社医療センター、東京大学医学部附属病院で循環器内科医として勤務。東京大学大学院で分子生物学領域の基礎研究に従事。医療系ベンチャーミーカンパニー株式会社を経て、2019年より株式会社テクロスへ入社。現在も臨床医の傍ら、TCROSS
                                         NEWSでwebコンテンツの企画とMedical advisorを兼任
-                                    </p>
-                                    <p>
-                                        プロフィール詳細 ＞
-                                    </p>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <img src="../../../<%= ASSET_PATH %>asset/img/services/rectangle.jpg" alt="高度な専門人材">
-                                </div>
-                                <div>
-                                    <h4>小田桐 周平</h4>
-                                    <p>
-                                        外資系CROにてCRA業務およびデータマネジメント業務を経験後、内資系体外診断薬メーカーにて研究開発に従事。<br />2021年株式会社テクロスへ入社し、Clinical
-                                        Study & Strategic Consulting
-                                        事業の立ち上げメンバーとなる。<br />臨床研究の実務経験3年以上。創薬科学修士。Googleデータアナリティクスプロフェッショナル認定保有。統計検定準1級。
                                     </p>
                                     <p>
                                         プロフィール詳細 ＞
